# quoridor

./: Board.qml  BoardFrame.qml  CMakeLists.txt  DragTile.qml  DropTile.qml  LICENSE  Options.qml  README.md  WallStock.qml  configs.qrc  images.qrc  main.qml  qml.qrc  quoridor.pro
AI/: brain.hpp  straight_brain.cpp  straight_brain.hpp
actors/: actor.cpp  actor.hpp  actor_component.hpp  actor_factory.cpp  actor_factory.hpp  actor_keeper.cpp  actor_keeper.hpp  ai_component.cpp  ai_component.hpp  graph_component.cpp  graph_component.hpp  wall_component.cpp  wall_component.hpp
configs/: player_position_3.json  player_position_4.json  player_wall_number_2.json  player_wall_number_4.json
events/: event_caller.cpp  event_caller.hpp  event_data.cpp  event_data.hpp  event_data_game.hpp  event_data_game_finished.cpp  event_data_game_finished.hpp  event_data_game_terminated.cpp  event_data_game_terminated.hpp  event_data_main_menu.cpp  event_data_main_menu.hpp  event_data_move_actor.cpp  event_data_move_actor.hpp  event_data_new_actor.hpp  event_data_options.hpp  event_data_quit.cpp  event_data_quit.hpp  event_data_request_actor_move.cpp  event_data_request_actor_move.hpp  event_data_request_new_actor.cpp  event_data_request_new_actor.hpp  event_data_request_set_wall.hpp  event_data_set_actor_active.hpp  event_data_set_actor_possible_moves.cpp  event_data_set_actor_possible_moves.hpp  event_data_set_wall.hpp  event_manager.cpp  event_manager.hpp
exceptions/: exception.hpp
game/: game_app.cpp  game_app.hpp  game_data.hpp  game_logic.cpp  game_logic.hpp  player_handler.hpp
graph/: board_graph.cpp  board_graph.hpp  graph.cpp  graph.hpp  node.cpp  node.hpp  wall.cpp  wall.hpp  wall_grid.cpp  wall_grid.hpp
qml/: DragTile.qml  DropTile.qml  WallStock.qml
resources/imagesets/: board.imageset  board.xcf  pawn.imageset  pawn.xcf  wall.imageset  wall.xcf  wall_repr.imageset  wall_repr.xcf
resources/layouts/: game.layout  horizontal_wall.layout  main_menu.layout  pawn_anim.layout  pawn_drag.layout  start_game.layout  start_game_player_list_2.layout  start_game_player_list_4.layout  vertical_wall.layout  wall_repr.layout
src/: CMakeLists.txt  board.cpp  board.hpp  board_graph.cpp  board_graph.hpp  exception.hpp  fake_player.cpp  fake_player.hpp  game.cpp  game.hpp  game_state.cpp  game_state.hpp  imove.hpp  iplayer.hpp  istate.hpp  logger.cpp  logger.hpp  main.cpp  main_menu_state.cpp  main_menu_state.hpp  move.cpp  move.hpp  node.cpp  node.hpp  pawn.cpp  pawn.hpp  player.cpp  player.hpp  player_factory.cpp  player_factory.hpp  pos.cpp  pos.hpp  state_manager.cpp  state_manager.hpp  stupid_player.cpp  walk_move.cpp  walk_move.hpp  wall.cpp  wall.hpp  wall_grid.cpp  (+3 more)
src/AI/: brain.hpp  randomer_brain.cpp  randomer_brain.hpp  straight_brain.cpp  straight_brain.hpp
src/UI/: console.cpp  console.hpp  irunnable.hpp  menu.hpp  ncurses.cpp  ncurses.hpp  ncurses_ui_impl.cpp  ncurses_ui_impl.hpp  runner.cpp  runner.hpp  ui.cpp  ui.hpp  ui_factory.cpp  ui_factory.hpp  ui_impl.hpp  window.hpp
src/UI/ncurses/: ncurses_menu.cpp  ncurses_menu.hpp  ncurses_ui.cpp  ncurses_ui.hpp  ncurses_window.cpp  ncurses_window.hpp
src/actors/: actor.cpp  actor.hpp  actor_component.hpp  actor_factory.cpp  actor_factory.hpp  actor_keeper.cpp  ai_component.cpp  ai_component.hpp  graph_component.cpp  graph_component.hpp  wall_component.cpp  wall_component.hpp
src/cegui_ext/: drag_event.cpp  drag_event.hpp  draggable_window.cpp  draggable_window.hpp  dragged_window.cpp  dragged_window.hpp
src/events/: event_caller.cpp  event_caller.hpp  event_data_game.cpp  event_data_game_finished.hpp  event_data_game_terminated.hpp  event_data_main_menu.hpp  event_data_move_actor.hpp  event_data_new_actor.cpp  event_data_options.cpp  event_data_options.hpp  event_data_request_new_actor.hpp  event_data_request_set_wall.cpp  event_data_set_actor_active.cpp  event_data_set_actor_possible_moves.hpp  event_data_set_wall.cpp  event_manager.cpp  event_manager.hpp
src/exceptions/: exception.hpp
src/game/: game_app.cpp  game_app.hpp  game_logic.cpp  game_logic.hpp  player_handler.cpp  player_handler.hpp
src/graph/: board_graph.cpp  board_graph.hpp  graph.hpp  wall.cpp  wall.hpp
src/player/: iplayer.hpp  middling_player.cpp  middling_player.hpp  move_handler.cpp  move_handler.hpp  player.cpp  player.hpp  player_factory.cpp  player_factory.hpp  stupid_player.cpp  stupid_player.hpp
src/state/: dragged_window.cpp  game_state.cpp  game_state.hpp  istate.hpp  main_menu_state.cpp  main_menu_state.hpp  node_utils.cpp  node_utils.hpp  pos_utils.cpp  pos_utils.hpp  start_game_state.cpp  start_game_state.hpp  state_manager.cpp  state_manager.hpp
src/state/cegui_ext/: dragged_window.cpp  dragged_window.hpp
src/view/: ai_view.cpp  ai_view.hpp  game_view.cpp  game_view.hpp  main_menu_view.cpp  main_menu_view.hpp  options_view.cpp  options_view.hpp  qt_view.hpp
t/: CMakeLists.txt  board_graph_unittest.cpp  board_unittest.cpp  game_test.cpp  mock_player.cpp  mock_player.hpp  node_unittest.cpp  node_utils_unittest.cpp  pos_utils_unittest.cpp  test_astar.cpp  wall_grid_unittest.cpp
utils/: gen_board_layout.plx
view/: ai_view.cpp  ai_view.hpp  game_view.cpp  game_view.hpp  iview.hpp  main_menu_view.cpp  main_menu_view.hpp  options_view.cpp  options_view.hpp  qt_view.cpp  qt_view.hpp
